# Doc-intelli

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Document_Intelligence_Platform_Milestones.md  README.md  docker-compose.yml  flask_app.py
.github/workflows/: ci.yml  security.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_pgvector.py  003_add_classification.py  004_add_users.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: base.py  tools.py  workflows.py
backend/app/api/v1/: agents.py  auth.py  chat.py  classification.py  documents.py  health.py  router.py  search.py
backend/app/core/: database.py  exceptions.py  logging.py  middleware.py  observability.py  rate_limit.py  security.py
backend/app/models/: __init__.py  classification.py  conversation.py  document.py  embedding.py  user.py
backend/app/schemas/: agent.py  auth.py  chat.py  classification.py  common.py  document.py  search.py
backend/app/services/: analytics_service.py  auth_service.py  classification_service.py  conversation_service.py  document_service.py  embedding_service.py  field_extraction_service.py  lightweight_classifier.py  llm_service.py  model_router.py  ner_service.py  rag_service.py  reranker_service.py  search_service.py  storage_service.py
backend/app/services/chunking/: base.py  fixed_size.py  semantic.py  sentence_based.py
backend/app/services/extraction/: base.py  csv_extractor.py  docx_extractor.py  factory.py  paddle_ocr_extractor.py  pdf_extractor.py  text_cleaner.py  txt_extractor.py
backend/app/tasks/: celery_app.py  classification_tasks.py  document_tasks.py  embedding_tasks.py
backend/tests/: conftest.py  test_documents.py  test_model_router.py
backend/tests/test_agents/: test_base.py  test_tools.py  test_workflows.py
backend/tests/test_extraction/: test_chunking.py  test_csv_extractor.py  test_factory.py  test_txt_extractor.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
infrastructure/: alb.tf  cloudwatch.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf  waf.tf
ml/classification/: config.yaml  evaluate_classifier.py  train_classifier.py  (+1 more)
scripts/: create_minio_buckets.py  seed_db.py
templates/: agents.html  base.html  chat.html  dashboard.html  document_detail.html  documents.html
(+38 files in other folders)
