[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-intelli-backend"
version = "0.1.0"
description = "AI-Powered Document Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    # Pydantic
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # Object storage
    "boto3>=1.34.0",
    # Document extraction
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "python-docx>=1.1.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-magic>=0.4.27;sys_platform!='win32'",
    "python-magic-bin>=0.4.14;sys_platform=='win32'",
    "charset-normalizer>=3.3.0",
    # ML / Embeddings
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "tiktoken>=0.7.0",
    # LLM
    "google-generativeai>=0.8.0",
    # NLP
    "spacy>=3.7.0",
    # Agents
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.7.0",
    # Observability
    "langfuse>=2.0.0",
    # Utilities
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
ml = [
    # Dataset loading & evaluation
    "datasets>=2.19.0",
    "scikit-learn>=1.4.0",
    "rouge-score>=0.1.2",
    "Pillow>=10.0.0",
    # Fine-tuning
    "peft>=0.11.0",
    "bitsandbytes>=0.43.0",
    "trl>=0.9.0",
    "accelerate>=0.30.0",
    "wandb>=0.17.0",
    # Config
    "pyyaml>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
